--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,57 +5,58 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="vertical"
         tools:context="com.nikstep.alarm.AlarmActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="78dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="460dp"
-        android:onClick="setAlarm"
-        android:text="@string/set_alarm"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/button"
+            android:layout_width="78dp"
+            android:layout_height="41dp"
+            android:onClick="setAlarm"
+            android:text="@string/set_alarm"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="40dp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/alarm_status"/>
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="516dp"
-        android:onClick="stopAlarm"
-        android:text="@string/stop_alarm"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="41dp"
+            android:onClick="stopAlarm"
+            android:text="@string/stop_alarm"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="40dp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/button"/>
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="576dp"
-        android:onClick="removeAlarm"
-        android:text="@string/remove_alarm"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="41dp"
+            android:onClick="removeAlarm"
+            android:text="@string/remove_alarm"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="40dp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/button2"/>
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="636dp"
-        android:onClick="goToNextSong"
-        android:text="@string/next_song"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="41dp"
+            android:onClick="goToNextSong"
+            android:text="@string/next_song"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="40dp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/alarm_status"/>
+
+    <Button
+            android:id="@+id/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="41dp"
+            android:onClick="openSongSelector"
+            android:text="@string/select_song"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="40dp"/>
 
     <TextView
         android:id="@+id/alarm_status"
