--- a/app/src/main/res/layout/activity_song_selector.xml
+++ b/app/src/main/res/layout/activity_song_selector.xml
@@ -5,8 +5,8 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/song_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
