--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        tools:context="com.nikstep.alarm.AlarmActivity">
+        android:layout_height="fill_parent"
+        android:layout_gravity="top"
+        android:layout_weight=".1"
+        android:onClick="goToAlarms">
 
-    <Button
-            android:id="@+id/button"
-            android:layout_width="78dp"
-            android:layout_height="41dp"
-            android:onClick="setAlarm"
-            android:text="@string/set_alarm"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="40dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/alarm_status"/>
+        <TextView
+            android:id="@+id/alarm_status"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:textSize="100sp" />
+    </LinearLayout>
 
-    <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="41dp"
-            android:onClick="stopAlarm"
-            android:text="@string/stop_alarm"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="40dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/button"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="bottom"
+        android:layout_weight=".1"
+        android:onClick="goToSongs">
 
-    <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="41dp"
-            android:onClick="removeAlarm"
-            android:text="@string/remove_alarm"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="40dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/button2"/>
+        <TextView
+            android:id="@+id/song_status"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:textSize="40sp" />
+    </LinearLayout>
 
-    <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="41dp"
-            android:onClick="goToNextSong"
-            android:text="@string/next_song"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="40dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/alarm_status"/>
-
-    <Button
-            android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="41dp"
-            android:onClick="openSongSelector"
-            android:text="@string/select_song"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="40dp"/>
-
-    <TextView
-        android:id="@+id/alarm_status"
-        android:layout_width="378dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="400dp"
-        android:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TimePicker
-        android:id="@+id/time_picker"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:layout_width="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
