--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.MainActivity">
 
-    <TextView
-            android:id="@+id/alarm_status"
+    <EditText
+            android:id="@+id/playlist_name_input"
             android:layout_width="378dp"
             android:layout_height="42dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="400dp"
-            android:text=""
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
