--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,17 @@
             android:layout_height="42dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="400dp"
+            android:text="6sU9yIquDtGDUJ0ofpYAJV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <EditText
+            android:id="@+id/previous_name_input"
+            android:layout_width="378dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="440dp"
+            android:text="spotify:track:5kl4Y5XymsUCl98GM7dgab"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
