--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/search"
+        android:id="@+id/notificationsPage"
         android:contentDescription="@string/notifications_top_button_description"
         android:icon="@drawable/baseline_notifications_white_24dp"
         android:title="@string/notifications_top_button"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/more"
+        android:id="@+id/settingsPage"
         android:contentDescription="@string/settings_top_button_description"
         android:title="@string/settings_top_button"
         app:showAsAction="never" />
