feat: update playlists button

--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -35,7 +35,7 @@
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/top_app_bar"
+            app:menu="@menu/top_playlists_bar"
             app:navigationIcon="@drawable/baseline_menu_white_24dp"
             app:title="@string/main_page_title" />
 
