--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                         android:text="@string/default_playlist" />
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/buttonSetAlarm"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
